# AI

./: Deep learning is a subset of machine learning roadmap to master deep learning .rtf  Pr2.py  Pr_Colab_V1.ipynb  Roadmap for learning Machine Learning.txt  data_processor.py  main.py  model.py  oadmap for learning Machine Learning (ML) and Artificial Intelligence (AI).rtf  roadmap to master deep learning.txt
GoldPricePredictor/: pyproject.toml
GoldPricePredictor/GoldPricePredictor/: data_processor.py  main.py  visualizer.py
GoldPricePredictor/Image Processing/: Find the corners in the image  Image Processing Edge detection.py  Image Processing Remove color in Videos.py  Image Processing copy range pixle to other range.py  Image Processing finde eyes in face.py  Image Processing image.py  Image Processing merg 2 photo.py  Image Processing pattern finde in picture.py  Image Processing remove Background.py  Image Processing threshold light picture.py  Image Processing type on video.py  Image Processing video make and save.py  Image processing copy image without background to another pic.py  Image processing draw line and square in videos.py  Imgae Processing pattern recognation in picture.py
GoldPricePredictor/Machine Learning/: KNN.py  SVM.py  (+2 more)
GoldPricePredictor/Machine Learning Basic/: Machine Learning - Multiple Regression.py  Machine Learning - Polynomial Regression.py  Machine Learning Mean Median Mode and Standard Deviation and Normal Data Distribution and Scatter Plot and Linear Regression .py  Machine Learning Percentiles and Data Distribution.py
(+184 files in other folders)
